force-app/main/default/objects/Related_Scheme_Risk__c/Related_Scheme_Risk__c.object-meta.xml
<CustomObject>
    <description>Junction object to allow multiple risk records to be associated with multiple other risks and relevant records</description>
    <label>Related Scheme Risk</label>
    <nameField>
        <displayFormat>RSR-{00000}</displayFormat>
        <label>Scheme Risks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related_Scheme Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>