force-app/main/default/objects/Related_Scheme_Risk__c/fields/Award__c.field-meta.xml
<CustomField>
    <fullName>Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Award that Risk Relates to</description>
    <label>Award</label>
    <referenceTo>Award</referenceTo>
    <relationshipName>Related_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>