force-app/main/default/objects/Related_Scheme_Risk__c/fields/Related_Award_Risk__c.field-meta.xml
<CustomField>
    <fullName>Related_Award_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Award Risk</label>
    <referenceTo>Risk_Register__c</referenceTo>
    <relationshipLabel>Other Related Risks</relationshipLabel>
    <relationshipName>Scheme_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>