force-app/main/default/objects/Related_Scheme_Risk__c/fields/Related_Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Related_Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Award that the child risk is associated with</description>
    <label>Related Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Related_Scheme Risks</relationshipLabel>
    <relationshipName>Related_Scheme_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>