force-app/main/default/objects/Related_Scheme_Risk__c/fields/Related_Scheme_Risk__c.field-meta.xml
<CustomField>
    <fullName>Related_Scheme_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Scheme Risk</label>
    <referenceTo>Risk_Register__c</referenceTo>
    <relationshipLabel>Related Risks</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <type>Lookup</type>
</CustomField>